--- a/Landing Pages/contact.html
+++ b/Landing Pages/contact.html
@@ -60,13 +60,13 @@ F A B R I C A T I O N S
 
     .tfPanelsContainer h1 {
       font-family: Montserrat, sans-serif;
-      font-size: 4em;
+      font-size: 3em;
       line-height: 1em;
     }
 
     @media screen and (max-width: 1600px) {
       .tfPanelsContainer h1 {
-          font-size: 3vw;
+          font-size: 2.5vw;
       }
 
       .tfPanelsContainer p {
@@ -83,6 +83,7 @@ F A B R I C A T I O N S
     .tfPanelsContainer p {
       font-size: 1vw;
       text-align: center;
+      line-height: 1vw;
     }
 
     .tfThreePanels {
@@ -115,12 +116,13 @@ F A B R I C A T I O N S
   <nav class="sidebar" style="position:relative;">
     <h5>About Us</h5>
     <ul>
-      <a href="/about"><li>Our Company</li></a>
+      <a href="/who"><li>Our Company</li></a>
       <a href="/about-brands"><li class="expandingNav">Our Brands</a>
         <ul class="tfHidden" style="margin-left:15px;">
           <a href="/about-brands-viski"><li>Viski</li></a>
           <a href="/about-brands-viski"><li>True</li></a>
           <a href="/about-brands-viski"><li>Host</li></a>
+          <a href="/about-brands-twine"><li>Twine</li></a>
         </ul>
       </li>
       <a href="/guarantee"><li>Our Guarantees</li></a>   
@@ -171,7 +173,7 @@ F A B R I C A T I O N S
       1.800.550.3329 <I><B>or</B></I> 206.299.9345 
     </div>
     <div class="contactRow">
-      <a href="mailto:consumer@truefabrications.com">consumer@truefabrications.com</a>
+      <a href="mailto:info@truefabrications.com">info@truefabrications.com</a>
     </div>
   </div>
 </div>
@@ -186,7 +188,7 @@ F A B R I C A T I O N S
     <img style="margin: 8.5px 0;" src="/assets/images/content/CD_pages/email_icon.png" />
     </div>
     <br />
-    <a href="mailto:consumer@truefabrications.com"><button class="truefabButton1" style="background: #B0BC22">
+    <a href="mailto:info@truefabrications.com"><button class="truefabButton1" style="background: #B0BC22">
       Email Us
     </button></a>
   </div>
