--- a/Landing Pages/guarantee.html
+++ b/Landing Pages/guarantee.html
@@ -47,12 +47,13 @@
   <nav class="sidebar" style="position:relative;">
     <h5>About Us</h5>
     <ul>
-      <a href="/about"><li>Our Company</li></a>
+      <a href="/who"><li>Our Company</li></a>
       <a href="/about-brands"><li class="expandingNav">Our Brands</a>
         <ul class="tfHidden" style="margin-left:15px;">
           <a href="/about-brands-viski"><li>Viski</li></a>
           <a href="/about-brands-viski"><li>True</li></a>
           <a href="/about-brands-viski"><li>Host</li></a>
+          <a href="/about-brands-twine"><li>Twine</li></a>
         </ul>
       </li>
       <a href="/guarantee"><li>Our Guarantees</li></a>   
@@ -68,6 +69,7 @@
 </div>
 <!-- End Sidebar -->
 
+
 <section id="guarantee" style="width: 80%;">
 <h3>Our Guarantees</h3>
 <p>We go to great lengths to ensure that ordering from True Fabrications is as fast, easy and carefree as possible. Not only do our guarantees set the industry standard, our customer service is unmatched. In short, your satisfaction is our absolute highest priority - because after all, without our customers we wouldn’t be where we are today.</p>
@@ -75,7 +77,7 @@
   <div class="tfFourPanels">
     <img src="/assets/images/content/CD_pages/true_guarantees_bestprice-01.png" />
     <h4>Best Price</h4>
-    <p>Go Ahead, shop around! If you find a better price, we'll match it.</p>
+    <p>Go ahead, shop around! If you find a better price, we'll match it.</p>
   </div>
   <div class="tfFourPanels">
     <img src="/assets/images/content/CD_pages/true_guarantees_satisfaction-01.png" />
