--- a/Landing Pages/jobs.html
+++ b/Landing Pages/jobs.html
@@ -4,47 +4,42 @@
 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+<style type="text/css">
+	.jobsPanel{
+		list-style: outside none none;
+		margin: 0px;
+		padding: 0px;
+	}
+
+	.jobsPanel li {
+		border-bottom: 2px solid #ddd;
+		margin-bottom: 50px;
+		padding-bottom: 50px;
+	}
+</style>
 </head>
 <body>
 <div class="tfBodyText">
-<section id="jobs">
-<h2 id="jobs">Jobs at True</h2>
-
-<h3>About Us</h3>
-
-<p>The boundaries of the beverage world have been redrawn. No longer tied to traditional means and methods of drinking, the new world of beverage incorporates every aspect of the experience, from the popping of the cork, to the pairings, to the places you sip and people you raise a glass with. True Fabrications makes products for the new world of drink, a place where innovation, selection, exceptional quality and cutting-edge aesthetics intersect. From our office at the urban epicenter of Seattle, we conceptualize, create and supply thousands of products across multiple categories to retailers around the world. Then we back it all with pricing, branding and customer service unmatched in the industry.</p>
-
-<br />
-
-<h3>Our Story</h3>
-
-<p>Founded in 2003 by a trio of college buddies who couldn’t find a decent wine bag, True Fabrications has grown from basement beginnings all the way to our current home in Seattle’s dynamic Fremont neighborhood. Today we’re the leading designer and supplier of beverage lifestyle accessories worldwide, still operating with the open, creative culture of a start-up. Our company of over 100 is anchored by an innovative, future-driven product development department, cutting-edge in-house design and supply teams, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. And with themed dress-up days, product launch parties, monthly company happy hours and trips to Hawaii to celebrate hard-earned success, there's never a dull moment in between all the hard work.</p>
-
-
-<br />
-
-<h3>Our Company Culture</h3>
-
-<p><strong>WE ARE DRIVEN AND DETERMINED</strong></p>
-
-<p>We are willing to go the extra mile.</p>
-
-<p><strong>WE ARE PEOPLE YOU CAN COUNT ON</strong></p>
-
-<p>We look out for each other and our customers.</p>
-
-<p><strong>WE NEVER STOP EVOLVING</strong></p>
-
-<p>We are here to grow as people and grow as a company.</p>
-
-<p><strong>WE ARE IN THIS TOGETHER</strong></p>
-
-<p>We’re a team of friends striving for a common goal.</p>
-
-<p><strong>WE ACT FROM THE FUTURE</strong></p>
-
-<p>Tomorrow is coming, and we’re here to define it.</p></section>
+<section id="jobs" style="width: 80%; min-width: 300px; margin: auto; text-align: justify;">
+<h1>Jobs at True</h1>
+<ul class="jobsPanel">
+<li><img src="/assets/images/content/CD_pages/jobs_images/1.png" />
+</li>
+<li><img src="/assets/images/content/CD_pages/jobs_images/2.png" />
+</li>
+<li><img src="/assets/images/content/CD_pages/jobs_images/3.png" />
+</li>
+<li><img src="/assets/images/content/CD_pages/jobs_images/4.png" />
+</li>
+<li><img src="/assets/images/content/CD_pages/jobs_images/5.png" />
+</li>
+<li><img src="/assets/images/content/CD_pages/jobs_images/6.png" />
+</li>
+<li style="border-bottom: none;"><img src="/assets/images/content/CD_pages/jobs_images/7.png" />
+</li>
+</ul>
+<a href="http://truefabrications.mytribehr.com/careers"><button class="truefabButton1" style="background: #b0b022; margin: 0 auto; display: block;"><h1>Become a TRUEther!</h1></button></a>
+</section>
 </div>
 <br />
 </body>
-	
