--- a/Landing Pages/returns.html
+++ b/Landing Pages/returns.html
@@ -20,7 +20,7 @@
   <nav class="sidebar" style="position:relative;">
     <h5>About Us</h5>
     <ul>
-      <a href="/about"><li>Our Company</li></a>
+      <a href="/who"><li>Our Company</li></a>
       <a href="/about-brands"><li class="expandingNav">Our Brands</a>
         <ul class="tfHidden" style="margin-left:15px;">
           <a href="/about-brands-viski"><li>Viski</li></a>
@@ -41,6 +41,7 @@
   </nav>
 </div>
 <!-- End Sidebar -->
+
   <section id="returns">
 
   <h3>Returns & Exchanges</h3>
