--- a/Landing Pages/who.html
+++ b/Landing Pages/who.html
@@ -14,12 +14,13 @@
   <nav class="sidebar" style="position:relative;">
     <h5>About Us</h5>
     <ul>
-      <a href="/about"><li>Our Company</li></a>
+      <a href="/who"><li>Our Company</li></a>
       <a href="/about-brands"><li class="expandingNav">Our Brands</a>
         <ul class="tfHidden" style="margin-left:15px;">
           <a href="/about-brands-viski"><li>Viski</li></a>
           <a href="/about-brands-viski"><li>True</li></a>
           <a href="/about-brands-viski"><li>Host</li></a>
+          <a href="/about-brands-twine"><li>Twine</li></a>
         </ul>
       </li>
       <a href="/guarantee"><li>Our Guarantees</li></a>   
@@ -35,9 +36,10 @@
 </div>
 <!-- End Sidebar -->
 
+
 <section id="who">
 <h3><span style="margin-bottom:0px;">Our Company</h3>
-<p style="text-align: justify;">Since 2015 True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
+<p style="text-align: justify;">True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
 <p style="text-align: justify;">To top it all off, everything we do is backed by our <B>100% Satisfaction Guarantee</B>. We hope you’ll become one of our thousands of loyal customers, and we look forward to building a thriving, long-lasting relationship with you and your business.
 </p>
 <h3>Our Mission</h3>
