--- a/Landing Pages/wholesalerRegistration.html
+++ b/Landing Pages/wholesalerRegistration.html
@@ -1,4 +1,7 @@
 <head>
+<title>
+True Fabrications | Guarantees
+</title>
 <link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
 
@@ -43,22 +46,22 @@
 <h2>Registration Successful!</h2>
 <p>Awesome! You’ve registered successfully. Welcome to the wholesale side of things, where you can check your account history, view wholesale pricing, find old invoices, place new orders, pay online, experiment with customization and live chat with our sales representatives if you have any questions. Have fun!</p>
 <div id="wholesalerRegistrationContainer">
-	<div class="innerWholesalerRegistration">
+  <div class="innerWholesalerRegistration">
     <img src="/assets/images/content/CD_pages/100Satisfaction_Icon.png" />
     <h3>100% satisfaction</h3>
-	</div>
-	<div class="innerWholesalerRegistration">
-    <img src="/assets/images/content/CD_pages/BestPrice_Icon.png" />
+  </div>
+  <div class="innerWholesalerRegistration">
+    <img src="/assets/images/content/CD_pages/true_icon_bestprice.png" />
     <h3>Best Price</h3>
-	</div>
-	<div class="innerWholesalerRegistration">
+  </div>
+  <div class="innerWholesalerRegistration">
     <img src="/assets/images/content/CD_pages/FastShipping_Icon.png" />
     <h3>Same-Day Shipping</h3>
-	</div>
-	<div class="innerWholesalerRegistration">
+  </div>
+  <div class="innerWholesalerRegistration">
     <img src="/assets/images/content/CD_pages/FreeBackorders_Icon.png" />
     <h3>Free Backorder Shipping</h3>
-	</div>
+  </div>
 </div>
 </section>
 </div>
